--- a/mycss.css
+++ b/mycss.css
@@ -102,6 +102,10 @@ text-align: center;
   background-color: blue;
 }
 
+.main-p4:hover {
+  background-color: red;
+}
+
 /*main-content-seoul*/
 .main-content-seoul {
   margin: 10px;
