--- a/mycss.css
+++ b/mycss.css
@@ -2,7 +2,8 @@
 .menu {
   width: 100px;
   background-color: white;
-  position: absolute;
+  position: fixed;
+  top: 10px;
   border: 1px solid black;
   padding: 10px;
 }
