--- a/mycss.css
+++ b/mycss.css
@@ -6,6 +6,7 @@
   top: 10px;
   border: 1px solid black;
   padding: 10px;
+  font-family: 'Helvetica', sans-serif;
 }
 
 /*Links*/
@@ -138,18 +139,8 @@ text-align: center;
 }
 
 
-          @media screen and (min-width:600px) {
-       nav {
-         float: left;
-         width: 25%;
-       }
-       section {
-         margin-left: 25%;
-       }
-     }
-     @media screen and (max-width:599px) {
-       nav li {
-         display: inline;
-         border: 1px powderblue solid;
-       }
-     }
+@media screen and (min-width:600px) {
+}
+
+@media screen and (max-width:599px) {
+}
